--- a/src/scss/pages/header/header.scss
+++ b/src/scss/pages/header/header.scss
@@ -1,9 +1,18 @@
 .header{
+    overflow: hidden;
     position: relative;
     height: 100vh;
-    padding: 20px 0;
-    background-color: $bcg-color;
-    overflow: hidden;
+    width: 100vw;    
+}
+.header::after{
+    content: '';
+    position: absolute;
+    width: 100vw;
+    height: 80px;
+    background-color: #fff;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
 }
 .head-content{
     display: flex;
@@ -23,9 +32,9 @@
     width: calc(100% - 40px);
     height: 100vh;
     background-color: #fff;
-    z-index: 20;
+    z-index: 155;
     transition: 400ms;
-    background-image: url('../img/header/bcg-sec.png');
+    background-image: url('../img/parallax/bcg-first.png');
     background-repeat: repeat;
     background-position: 0 0;
 }
@@ -96,6 +105,20 @@
     font-weight: 700;
     color: #000;
     margin-left: 10px;
+}
+
+// Overlay
+
+.overlay{
+    display: none;
+    background-color: #000;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    opacity: 0.7;
+    z-index: 150;
 }
 
 @media screen and(min-width: 480px) {
