--- a/src/scss/general/body.scss
+++ b/src/scss/general/body.scss
@@ -7,6 +7,7 @@ body {
     color: #000;
     font-family: "Montserrat";
     background-color: #fff;
+    overflow-x: hidden;
 }
 .title{
     display: flex;
