--- a/src/scss/pages/foo/footer.scss
+++ b/src/scss/pages/foo/footer.scss
@@ -1,6 +1,18 @@
 .foo{
+    position: relative;
     padding-top: 70px;
-    padding-bottom: 30px;
+    background-color: $bcg-color;
+    z-index: -1;
+}
+.foo::after{
+    content: '';
+    width: 100%;
+    height: 22%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: #fff;
+    z-index: -2;
 }
 
 // Connecting Form
@@ -74,7 +86,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 55px;
+    padding: 250px 0 50px;
 }
 .foo-logo{
     position: absolute;
