--- a/src/scss/pages/header/head-burger.scss
+++ b/src/scss/pages/header/head-burger.scss
@@ -1,5 +1,10 @@
-.head__burger{
+.header-container{
     position: relative;
+}
+.head__burger{
+    position: absolute;
+    top: 20px;
+    right: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
