--- a/src/scss/pages/header/header.scss
+++ b/src/scss/pages/header/header.scss
@@ -1,25 +1,11 @@
 .header{
-    overflow: hidden;
     position: relative;
     height: 100vh;
-    width: 100vw;    
+    width: 100vw;   
+    padding-top: 20px; 
+    background-color: transparent;
+    overflow-x: hidden;
 }
-.header::after{
-    content: '';
-    position: absolute;
-    width: 100vw;
-    height: 80px;
-    background-color: #fff;
-    bottom: 0;
-    left: 0;
-    z-index: -1;
-}
-.head-content{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 // Navigation
 .head__nav{
     position: fixed;
@@ -34,7 +20,6 @@
     background-color: #fff;
     z-index: 155;
     transition: 400ms;
-    background-image: url('../img/parallax/bcg-first.png');
     background-repeat: repeat;
     background-position: 0 0;
 }
@@ -134,10 +119,10 @@
 }
 
 @media screen and (min-width: 1024px) {
-    .head__logo{
+    .head__logo-header{
         position: absolute;
         top: 20px;
-        left: calc(50% - 65px);
+        left: calc(50% - 75px);
     }
     .head__nav{
         position: static;
