--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,5 +15,6 @@
 @import "./pages/network/network";
 
 @import "./pages/foo/footer";
+@import "./pages/logo/logo";
 
 @import "./pages/parallax/parallax";
