--- a/src/scss/pages/foo/footer.scss
+++ b/src/scss/pages/foo/footer.scss
@@ -1,20 +1,24 @@
 .foo{
     position: relative;
-    height: calc(100vh - 70px);
-    width: 100vw;
+    min-width: 100vw;
+    height: auto;
     padding-top: 70px;
     background-color: $bcg-color;
-    z-index: -1;
+    overflow-x: hidden;
+    z-index: 2;
 }
 
-// Connecting Form
-.foo-form{
+// Contact Form
+.contact-form{
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 260px;
     margin: 30px auto 0;
+    height: 100%;
+    padding-bottom: 200px;
 }
-.foo-input{
+.contact-input{
     position: relative;
     width: calc(100% - 64px);
     padding: 20.5px 30px;
@@ -22,16 +26,16 @@
     border: none;
     border-radius: 59px;
 }
-.foo-input::-webkit-outer-spin-button,
-.foo-input::-webkit-inner-spin-button {
+.contact-input::-webkit-outer-spin-button,
+.contact-input::-webkit-inner-spin-button {
     appearance: none;
 }
-.foo-input::placeholder{
+.contact-input::placeholder{
     font-weight: 400;
     font-size: 0.9rem;
     color: #222222;
 }
-.foo-btn-call{
+.contact-btn-call{
     background: linear-gradient(180deg, #FE5626 0%, #F23F0E 100%), #59AAF1;
     box-shadow: 0px 4px 8px rgba(205, 169, 41, 0.26);
     width: 100%;
@@ -42,59 +46,106 @@
     color: #fff;
     transition: box-shadow 250ms ease;
 }
-.foo-btn-call:hover,
-.foo-btn-call:focus {
+.contact-btn-call:hover,
+.contact-btn-call:focus {
     box-shadow: 0px 4px 8px rgba(205, 71, 71, 1.26);
 }
-.foo-btn-icon{
+.contact-btn-icon{
     padding-left: 30px;
 }
 
 // Form Border
-.foo-input-wrapp{
+.contact-form-wrapp{
     position: relative;
 }
-.foo-input-wrapp::after{
+.contact-form-wrapp::after{
     position: absolute;
     top: -2px;
     left: -2px; 
     content: '';
     width: 100%;
     height: calc(100% + 4px);
-    background-color: #ECEEF6;
+    background: #ECEEF6;
     border-radius: 59px;
     z-index: -2;
 }
-.foo-input-wrapp:nth-child(2){
+.contact-form-wrapp:nth-child(2){
     margin: 20px 0;
 }
-.foo-input-wrapp:focus::after,
-.foo-input-wrapp:hover::after{
-    background: $bcg-gradient;
+.contact-form-wrapp:focus::after,
+.contact-form-wrapp:hover::after{
+    background-image: $bcg-gradient;
 }
 
 @media screen and( min-width: 1024px) {
-    .foo-form{
+    .contact-form{
         flex-direction: row;
         justify-content: space-evenly;
         width: 100%;
         margin: 30px auto 0;
+        padding-bottom: 350px;
     }
-    .foo-input{
+    .contact-input{
         width: calc(256px - 60px);
     }
-    .foo-input-wrapp{
+    .contact-form-wrapp{
         width: 260px;
         height: 60px;
     }
-    .foo-input-wrapp::after{
+    .contact-form-wrapp::after{
         width: 100%;
         height: 100%;
     }
-    .foo-input-wrapp:nth-child(2){
+    .contact-form-wrapp:nth-child(2){
         margin: 0;
     }
-    .foo-btn-call{
+    .contact-btn-call{
         width: 260px;
+    }
+}
+
+//Logo and Author
+.foo__logo{
+    background: #fff;
+    z-index: -3;
+}
+.logo-wrapp{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px 0;
+}
+.logo-img{
+    position: absolute;
+    top: 30px;
+}
+.logo-author{
+    padding-top: 85px;
+    font-weight: 400;
+    font-size: 1rem;
+}
+.logo-desc{
+    padding-top: 20px;
+    font-weight: 400;
+    font-size: 1rem;
+}
+.logo-desc-bold{
+    font-weight: 700;
+}
+
+@media screen and( min-width: 768px) {
+    .logo-wrapp{
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .logo-img{
+        position:static;
+    }
+    .logo-author{
+        padding-top: 0;
+    }
+    .logo-desc{
+        padding-top: 0;
     }
 }
