--- a/src/scss/pages/parallax/parallax.scss
+++ b/src/scss/pages/parallax/parallax.scss
@@ -1,60 +1,112 @@
 // Header Parallax
 .scene{
-    position: fixed;
+    position: absolute;
     top: 0;
-    left: -5%;
+    left: 0;
+    min-width: 320px;
     width: 110%;
-    height: 85%;
-    background-color: $bcg-color;
+    height: 100vh;
+    background: $bcg-color;
 }
 .scene__layer{
     position: absolute;
-    width: 110%;
+    width: 100%;
     height: 100vh;
     background-repeat: no-repeat;
+    
 }
 .layer-1{
-    background-image: url('/img/parallax/bcg-first.png');
-    background-size: 80% auto;
-    background-position: 25% 65%;
+    background-image: url('../img/parallax/bcg-first.png');
+    background-size: 100% auto;
+    background-position: 25% 85%;
 }
 .layer-2{
-    background-image: url('/img/parallax/bcg-sec.png');
-    background-size: 80% auto;
-    background-position: 0% 70%;
+    background-image: url('../img/parallax/bcg-sec.png');
+    background-size: 90% auto;
+    background-position: 0% 90%;
 }
 .layer-3{
-    background-image: url('/img/parallax/bcg-pizza.png');
-    background-size: 75% auto;
-    background-position: 45% 90%;
+    background-image: url('../img/parallax/bcg-pizza.png');
+    background-size: 85% auto;
+    background-position: 100% 100%;
 }
 
 @media screen and (min-width: 480px) {
     .layer-3{
-        background-size: 60% auto;
+        background-size: 65% auto;
+        background-position: 60% 90%;
     }
 }
 @media screen and (min-width: 768px) {
     .layer-3{
-        background-size: 50% auto;
+        background-size: 55% auto;
     }
 }
 @media screen and (min-width: 1024px) {
+    .layer-1{
+        background-size: 85% auto;
+        background-position: 50% 35%;
+    }
     .layer-3{
         background-size: 40% auto;
+        background-position: center 80%;
     }
 }
-@media screen and (min-width: 1600px) {
-    .layer-3{
-        background-size: 35% auto;
+// Footer Parallax
+.foo-parallax {
+    overflow-x: hidden;
+    overflow-y: scroll;
+    width: 100%;
+}
+.foo-scene {
+    position: absolute;
+    top: 0;
+    left: -5%;
+    width: 108%;
+    height: 100%;
+    background-repeat: no-repeat;
+  }
+  
+  .foo-layer1 {
+    background-image: url("../img/parallax/foo-layer1.png");
+    background-position: center 65%;
+    background-size: 95% auto;
+  }
+  
+  .foo-layer2 {
+    background-image: url("../img/parallax/foo-layer2.png");
+    background-position: center 60%;
+    background-size: 100% auto; 
+  }
+  
+  .foo-layer3 {
+    background-image: url("../img/parallax/foo-layer3.png");
+    background-position: center 72%;
+    background-size: 85% auto;
+  }
+
+@media screen and (min-width: 480px) {
+    .foo-layer3{
+        background-position: center 73%;
     }
 }
 
-// Footer Parallax
-.foo-scene{
-    position: absolute;
-    z-index: -2;
-    top: 0;
-    left: 0;
-    width: 100%;
+@media screen and (min-width: 768px) {
+    .foo-layer3{
+        background-position: center 80%;
+        background-size: 70% auto;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .foo-layer3{
+        background-position: center 83%;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .foo-layer3{
+        background-position: center 83%;
+        background-size: 60% auto;
+    }
 }
