--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,7 @@
 
 @import "./pages/network/network";
 
+@import "./pages/btn-scroll-up/btn-scroll-up";
 @import "./pages/foo/footer";
 
 @import "./pages/parallax/parallax";
