--- a/src/scss/pages/header/header.scss
+++ b/src/scss/pages/header/header.scss
@@ -4,7 +4,19 @@
     width: 100vw;   
     padding-top: 20px; 
     background-color: transparent;
-    overflow-x: hidden;
+    overflow: hidden;
+    background: $bcg-color;
+    z-index: 2;
+}
+.header::after{
+    content: '';
+    width: 100%;
+    height: 15%;
+    background-color: #fff;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
 }
 // Navigation
 .head__nav{
@@ -140,7 +152,22 @@
         flex-direction: row;
     }
     .nav-link{
+        position: relative;
         font-size: 1rem;
+    }
+    .nav-link::after{
+        position: absolute;
+        bottom: 0;
+        display: block;
+        width: 0%;
+        height: 2px;
+        background: $accentSec;
+        content: '';
+        transition: width 0.2s;
+    }
+    .nav-link:hover::after,
+    .nav-link:focus::after{
+        width: 100%;
     }
     .nav-link:nth-child(2) {
         margin: 0 40px;
