--- a/src/scss/pages/parallax/parallax.scss
+++ b/src/scss/pages/parallax/parallax.scss
@@ -1,57 +1,74 @@
 // Header Parallax
 .scene{
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 320px;
-    width: 110%;
-    height: 100vh;
-    background: $bcg-color;
+    overflow: hidden;
+    width: 100%;
 }
 .scene__layer{
     position: absolute;
-    width: 100%;
-    height: 100vh;
+    top: 0;
+    left: -5%;
+    width: 120%;
+    height: 100%;
     background-repeat: no-repeat;
-    
 }
 .layer-1{
     background-image: url('../img/parallax/bcg-first.png');
-    background-size: 100% auto;
-    background-position: 25% 85%;
+    background-size: 80% auto;
+    background-position: 25% 65%;
 }
 .layer-2{
     background-image: url('../img/parallax/bcg-sec.png');
     background-size: 90% auto;
-    background-position: 0% 90%;
+    background-position: 0% 70%;
 }
 .layer-3{
     background-image: url('../img/parallax/bcg-pizza.png');
-    background-size: 85% auto;
-    background-position: 100% 100%;
+    background-size: 90% auto;
+    background-position: 60% 85%;
 }
 
 @media screen and (min-width: 480px) {
+    .layer-1{
+        background-position: 25% 60%;
+    }
     .layer-3{
-        background-size: 65% auto;
-        background-position: 60% 90%;
+        background-size: 70% auto;
+        background-position: 50% 90%;
     }
 }
 @media screen and (min-width: 768px) {
+    .layer-1{
+        background-position: 25% 50%;
+    }
     .layer-3{
-        background-size: 55% auto;
+        background-size: 50% auto;
+        background-position: 50% 80%;
     }
 }
 @media screen and (min-width: 1024px) {
     .layer-1{
-        background-size: 85% auto;
-        background-position: 50% 35%;
+        background-position: 20% 35%;
     }
     .layer-3{
         background-size: 40% auto;
         background-position: center 80%;
     }
 }
+@media screen and (min-width: 1440px) {
+    .layer-1{
+        background-size: 70% auto;
+        background-position: 35% 0%;
+    }
+    .layer-2{
+        background-size: 85% auto;
+        background-position: 10% 50%;
+    }
+    .layer-3{
+        background-size: 35% auto;
+        background-position: center 80%;
+    }
+}
+
 // Footer Parallax
 .foo-parallax {
     overflow-x: hidden;
