--- a/src/scss/pages/header/header.scss
+++ b/src/scss/pages/header/header.scss
@@ -1,7 +1,7 @@
 .header{
     position: relative;
     height: 100vh;
-    width: 100vw;   
+    min-width: 100vw;   
     padding-top: 20px; 
     background-color: transparent;
     overflow: hidden;
